fix: add missing color variables to main.css

--- a/react_styling/task_1/dashboard/src/main.css
+++ b/react_styling/task_1/dashboard/src/main.css
@@ -2,6 +2,8 @@
 
 @theme {
   --font-roboto: "Roboto", sans-serif;
+  --color-table-header: #deb5b5;
+  --color-table-rows: #CDCDCD;
 }
 
 @layer base {
